--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-notifications": "^1.7.4",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
+    "redux": "^5.0.1",
     "yup": "^1.7.0"
   },
   "devDependencies": {
